base-2/apps/frontend/lh_staff_frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: servicelhstafffrontend
spec:
  selector:
    app: deploylhstafffrontend
  type: NodePort
  ports:
  - name: http-staff
    protocol: TCP
    port: 80
    targetPort: 80
    nodePort: 31200
